--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   http: ^1.4.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
